--- a/NodeJS/public/index.html
+++ b/NodeJS/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <base href="/">
 
-    <title>Starter Node and Angular</title>
+    <title>RBC EGFT</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
@@ -28,12 +28,15 @@
     <!-- HEADER -->
     <nav class="navbar navbar-inverse">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Stencil: Node and Angular</a>
+            <a class="navbar-brand" href="/">RBC EGFT</a>
         </div>
 
         <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
         <ul class="nav navbar-nav">
-            <li><a href="/nerds">Nerds</a></li>
+            <li><a href="/AddProduct">Add a Product</a></li>
+            <li><a href="/RemoveProduct">Remove a Product</a></li>
+            <li><a href="/Register">Register</a></li>
+            <li><a href="/Login">Login</a></li>
         </ul>
     </nav>
 
