--- a/NodeJS/public/js/directives/appProduct.html
+++ b/NodeJS/public/js/directives/appProduct.html
@@ -1,4 +1,4 @@
-<img class="icon" ng-src="{{info.icon}}">
-<h2 class="title">{{info.title}}</h2>
-<p class="description">{{info.description}}</p>
-<p class="price">{{info.price}}</p>
+<img class="icon" ng-src="{{product.image}}">
+<h2 class="title">{{product.productname}}</h2>
+<p class="description">{{product.productdescription}}</p>
+<p class="price">{{product.price | currency}}</p>
