--- a/NodeJS/public/index.html
+++ b/NodeJS/public/index.html
@@ -25,8 +25,10 @@
     <script src="js/services/LoginService.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
+
+    <!-- ANGULAR DIRECTIVES -->
 </head>
-<body ng-app="sampleApp" ng-controller="NerdController">
+<body ng-app="sampleApp">
 <div class="container">
 
     <!-- HEADER -->
