Added Login and Product services to allow for login and product caching

--- a/NodeJS/public/index.html
+++ b/NodeJS/public/index.html
@@ -16,6 +16,9 @@
     <script src="libs/angular-route/angular-route.min.js"></script>
     <script src="libs/angular-cookies/angular-cookies.js"></script>
 
+    <script src="js/app.js"></script>
+    <script src="js/appRoutes.js"></script>
+
     <!-- ANGULAR CUSTOM -->
     <script src="js/controllers/MainCtrl.js"></script>
     <script src="js/controllers/NerdCtrl.js"></script>
@@ -23,10 +26,12 @@
     <script src="js/controllers/RegisterCtrl.js"></script>
     <script src="js/services/NerdService.js"></script>
     <script src="js/services/LoginService.js"></script>
-    <script src="js/appRoutes.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/services/ProductService.js"></script>
+
+
 
     <!-- ANGULAR DIRECTIVES -->
+    <script src="js/directives/appProduct.js"></script>
 </head>
 <body ng-app="sampleApp">
 <div class="container">
