--- a/NodeJS/public/index.html
+++ b/NodeJS/public/index.html
@@ -24,6 +24,7 @@
     <script src="js/controllers/NerdCtrl.js"></script>
     <script src="js/controllers/LoginCtrl.js"></script>
     <script src="js/controllers/ProductCtrl.js"></script>
+    <script src="js/controllers/PurchaseCtrl.js"></script>
     <script src="js/controllers/RegisterCtrl.js"></script>
     <script src="js/services/NerdService.js"></script>
     <script src="js/services/LoginService.js"></script>
@@ -33,7 +34,7 @@
     <!-- ANGULAR DIRECTIVES -->
     <script src="js/directives/appProduct.js"></script>
 </head>
-<body ng-app="sampleApp" ng-controller="MainController">
+<body ng-app="sampleApp">
 <div class="container">
 
     <!-- HEADER -->
