Added Login Validation. Added Purchasing API. Added another window after confirming purchases to indicate success

--- a/NodeJS/public/index.html
+++ b/NodeJS/public/index.html
@@ -26,6 +26,7 @@
     <script src="js/controllers/ProductCtrl.js"></script>
     <script src="js/controllers/PurchaseCtrl.js"></script>
     <script src="js/controllers/RegisterCtrl.js"></script>
+    <script src="js/controllers/SuccessCtrl.js"></script>
     <script src="js/services/NerdService.js"></script>
     <script src="js/services/LoginService.js"></script>
     <script src="js/services/ProductService.js"></script>
