Created Purchase History View, Fixed bug in purchase page wasn't posting the correct total cost

--- a/NodeJS/public/index.html
+++ b/NodeJS/public/index.html
@@ -27,6 +27,7 @@
     <script src="js/controllers/PurchaseCtrl.js"></script>
     <script src="js/controllers/RegisterCtrl.js"></script>
     <script src="js/controllers/SuccessCtrl.js"></script>
+    <script src="js/controllers/PurchaseHistoryCtrl.js"></script>
     <script src="js/services/NerdService.js"></script>
     <script src="js/services/LoginService.js"></script>
     <script src="js/services/ProductService.js"></script>
@@ -48,7 +49,9 @@
         <ul class="nav navbar-nav">
             <li><a href="/AddProduct">Add a Product</a></li>
             <li><a href="/RemoveProduct">Remove a Product</a></li>
-            <li ng-if="authenticated == false"><a href="/Register">{{authenticated}}</a></li>
+            <li><a href="/PurchaseHistory">My Purchases</a></li>
+            <li><a href="/SaleHistory">My Sales</a></li>
+            <li ng-if="authenticated == false"><a href="/Register">Register</a></li>
             <li ng-if="authenticated == true && currentUser != 'login'"><a>Welcome {{currentUser.userid}}!</a></li>
             <!--<li><a href="/Login">Login</a></li>-->
         </ul>
