added image names list, image sizing

--- a/NodeJS/public/js/directives/appProduct.html
+++ b/NodeJS/public/js/directives/appProduct.html
@@ -1,4 +1,4 @@
-<img class="icon" ng-src="{{info.image}}">
+<img class="icon" ng-src="{{info.image}}" width="100px" height="100px">
 <h3 class="title">{{info.productname}}</h3>
 <p class="description">{{info.productdescription}}</p>
 <p class="price">{{info.price | currency}}</p>
