--- a/NodeJS/public/index.html
+++ b/NodeJS/public/index.html
@@ -42,7 +42,7 @@
     <!-- HEADER -->
     <nav class="navbar navbar-inverse">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">RBC EGFT</a>
+            <a class="navbar-brand" href="/">HOME</a>
         </div>
 
         <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
