--- a/NodeJS/public/index.html
+++ b/NodeJS/public/index.html
@@ -15,6 +15,7 @@
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular-route/angular-route.min.js"></script>
     <script src="libs/angular-cookies/angular-cookies.js"></script>
+    <script src="libs/angular-bootstrap/ui-bootstrap-tpls.js"></script>  
 
     <script src="js/app.js"></script>
     <script src="js/appRoutes.js"></script>
